// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The header is rendered with the correct breadcrumb links  When a basepath is not passed through 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "border": "none",
      "borderRadius": "0",
      "marginBottom": "0",
      "width": "100%",
    }
  }
>
  <nav
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <ol
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "listStyle": "none",
          "padding": "1rem",
        }
      }
    >
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/folder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "1.5rem",
              "textAlign": "left",
              "textDecoration": "none",
            }
          }
        >
          folder
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/folder/nestedFolder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "1.5rem",
              "textAlign": "left",
              "textDecoration": "none",
            }
          }
        >
          nestedFolder
        </a>
      </li>
    </ol>
    <span
      style={
        Object {
          "alignItems": "center",
          "color": "white",
          "display": "flex",
          "fontSize": "0.85rem",
          "paddingRight": "6px",
        }
      }
    >
      Page generated on 
      18
      <sup>
        th
      </sup>
       
      July
       
      2022
    </span>
  </nav>
</div>
`;

exports[`The header is rendered with the correct breadcrumb links  When a basepath is passed through 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "border": "none",
      "borderRadius": "0",
      "marginBottom": "0",
      "width": "100%",
    }
  }
>
  <nav
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <ol
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "listStyle": "none",
          "padding": "1rem",
        }
      }
    >
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "1.5rem",
              "textAlign": "left",
              "textDecoration": "none",
            }
          }
        >
          morty-docs
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs/some-repo"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "1.5rem",
              "textAlign": "left",
              "textDecoration": "none",
            }
          }
        >
          some-repo
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs/some-repo/folder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "1.5rem",
              "textAlign": "left",
              "textDecoration": "none",
            }
          }
        >
          folder
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs/some-repo/folder/nestedFolder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "1.5rem",
              "textAlign": "left",
              "textDecoration": "none",
            }
          }
        >
          nestedFolder
        </a>
      </li>
    </ol>
    <span
      style={
        Object {
          "alignItems": "center",
          "color": "white",
          "display": "flex",
          "fontSize": "0.85rem",
          "paddingRight": "6px",
        }
      }
    >
      Page generated on 
      18
      <sup>
        th
      </sup>
       
      July
       
      2022
    </span>
  </nav>
</div>
`;
